ailist/src/ailist/augmented_interval_list.h

//-------------------------------------------------------------------------------------

typedef struct {
	int64_t nr, mr;						// Number of intervals
	interval_t *interval_list;			// List of interval_t objects
	int nc, lenC[MAXC], idxC[MAXC];		// Components
	uint32_t *maxE;						// Augmentation
	uint32_t first, last;				// Record range of intervals
} ailist_t;
// Subtract intervals from region
void ailist_common_intervals(interval_t *intv, ailist_t *ail, ailist_t *result_ail);
// Common intervals of two ailist_t intervals
ailist_t *ailist_common(ailist_t *ail, ailist_t *other_ail);
// Union of two ailist_t intervals
ailist_t *ailist_union(ailist_t *ail, ailist_t *other_ail);
//-------------------------------------------------------------------------------------
// ailist_filter.c
//=====================================================================================

// Filter ailist by length
void ailist_length_filter(ailist_t *ail, ailist_t *filtered_ail, int min_length, int max_length);
// Randomly downsample
ailist_t *ailist_downsample(ailist_t *ail, double proportion);
//-------------------------------------------------------------------------------------
// ailist_simulate.c
//=====================================================================================

// Simulate intervals
void ailist_simulate(ailist_t *ail, ailist_t *simulation, int n);
//-------------------------------------------------------------------------------------
// ailist_closest.c
//=====================================================================================

ailist_t *ailist_closest(int start, int end, ailist_t *ail, int k);