ailist/AIList_core.pxd


	# Subtract intervals from region
	void ailist_common_intervals(interval_t *intv, ailist_t *ail, ailist_t *result_ail) nogil

	# Subtract two ailist_t intervals
	ailist_t *ailist_common(ailist_t *ail, ailist_t *other_ail) nogil

	# Union of two ailist_t intervals
	ailist_t *ailist_union(ailist_t *ail, ailist_t *other_ail) nogil


	#-------------------------------------------------------------------------------------
	# ailist_filter.c
	#=====================================================================================

	# Filter ailist by length
	void ailist_length_filter(ailist_t *ail, ailist_t *filtered_ail, int min_length, int max_length) nogil

	# Randomly downsample
	ailist_t *ailist_downsample(ailist_t *ail, double proportion) nogil


	#-------------------------------------------------------------------------------------
	# ailist_simulate.c
	#=====================================================================================

	# Simulate intervals
	void ailist_simulate(ailist_t *ail, ailist_t *simulation, int n) nogil


	#-------------------------------------------------------------------------------------
	# ailist_closest.c
	#=====================================================================================

	ailist_t *ailist_closest(int start, int end, ailist_t *ail, int k) nogil


cpdef object rebuild_AIList(bytes data, bytes b_length)


cdef class AIList(object):
	"""
	Wrapper for C ailist_t
	"""

	# AIList attributes
	cdef ailist_t *c_ailist
	cdef public bint is_constructed
	cdef public bint is_closed
	cdef public bint is_frozen

	# Methods for serialization
	cdef bytes _get_data(self)
	cdef ailist_t *_set_data(self, bytes data, bytes b_length)

	# AIList methods
	cdef void set_list(AIList self, ailist_t *input_list)
	cdef void _insert(AIList self, int start, int end, int id_value)
	cdef void _construct(AIList self, int min_length)
	cdef ailist_t *_array_id(AIList self, const long[::1] ids)
	cdef ailist_t *_interval_id(AIList self, int id_value)
	cdef ailist_t *_intersect(AIList self, int start, int end)
	cdef ailist_t *_intersect_from_array(AIList self, const long[::1] starts, const long[::1] ends)
	cdef np.ndarray _intersect_ids(AIList self, int start, int end)
	cpdef _intersect_ids_from_array(AIList self, const long[::1] starts, const long[::1] ends, const long[::1] ids)
	cdef ailist_t *_intersect_from_ailist(AIList self, AIList ail)
	cdef np.ndarray _coverage(AIList self)
	cdef np.ndarray _bin_coverage(AIList self, int bin_size)
	cdef np.ndarray _bin_coverage_length(AIList self, int bin_size, int min_length, int max_length)
	cdef np.ndarray _bin_nhits(AIList self, int bin_size)
	cdef np.ndarray _bin_nhits_length(AIList self, int bin_size, int min_length, int max_length)
	cdef void _nhits(AIList self, long *nhits, int start, int end)
	cdef void _nhits_length(AIList self, long *nhits, int start, int end, int min_length, int max_length)
	cdef np.ndarray _wps(AIList self, int protection)
	cdef np.ndarray _wps_length(AIList self, int protection, int min_length, int max_length)
	cdef np.ndarray _length_dist(AIList self)
	cdef np.ndarray _nhits_from_array(AIList self, const long[::1] starts, const long[::1] ends)
	cdef np.ndarray _nhits_from_array_length(AIList self, const long[::1] starts, const long[::1] ends, int min_length, int max_length)
	cdef np.ndarray _interval_coverage(AIList self, int start, int end)